app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    type:     NodePort
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
